--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ body {
 .bounce1 {
   animation: bounce 1.5s infinite;
   font-size: 40px;
+  margin: 0 auto;
+  display: inline-block;
 }
 
 
@@ -456,7 +458,7 @@ p {
 
 .p9 {
   text-align: center;
-  padding-left: 40px;
+  padding-left: 55px;
 }
 
 .about{
@@ -466,14 +468,31 @@ p {
     scroll-margin-top: 16px; /* Adjust this value as needed */
 }
 
-.gallery-item {
-  position: relative;
-  width: 30%;
-  overflow: hidden;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.0);
-  transition: all 0.5s ease-in-out;
-  padding-bottom: 20vh;
+.gallery-wrapper {
+  display: block; /* no need for flex */
+  width: 100%;
+  padding: 2rem 0;
 }
+
+.gallery-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  /* horizontal centering */
+  gap: 2rem;
+  width: 100%;
+}
+
+.gallery-item {
+  width: 100%;
+  max-width: 300px;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+  padding-bottom: 5vh;
+  padding-right: 70px;
+}
+
+
 
 .gallery-item:not(.active) {
   width: calc((100% - 20px) / 2);
@@ -610,6 +629,12 @@ p {
   
   .mobile {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-item {
+    width: 30%;
   }
 }
 
